new: buttons' hovers

--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,10 @@ a {
   line-height: 20px;
   color: #ffffff;
 }
+.header__nav-link:hover, .header__nav-link:focus-visible {
+  outline: none;
+  color: rgba(255, 255, 255, 0.5);
+}
 .header__content {
   display: grid;
   grid-template-columns: 330px 1fr 200px 100px;
@@ -538,10 +542,18 @@ a {
   line-height: 18px;
   cursor: pointer;
 }
+.btn:hover, .btn:focus-visible {
+  background-color: #eee0f6;
+  outline: none;
+}
 .btn--bg-lilac {
   background-color: #9e5fc4;
   border: none;
   color: #ffffff;
+}
+.btn--bg-lilac:hover, .btn--bg-lilac:focus-visible {
+  background-color: #8e47b8;
+  outline: none;
 }
 .btn--size-small {
   width: 154px;
@@ -564,6 +576,11 @@ a {
   border-radius: 50%;
   border: 1px solid rgba(158, 95, 196, 0.5);
   color: #9e5fc4;
+}
+.social__link:hover, .social__link:focus-visible {
+  outline: none;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 .social__link-icon {
   width: 18px;
@@ -624,6 +641,10 @@ a {
   line-height: 20px;
   color: #ffffff;
 }
+.main-nav__link:hover, .main-nav__link:focus-visible {
+  outline: none;
+  color: rgba(255, 255, 255, 0.5);
+}
 
 .menu-tours {
   min-height: 451px;
@@ -652,10 +673,15 @@ a {
   gap: 10px;
   cursor: pointer;
 }
-.menu-tours__link-text {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
+.menu-tours__link:hover, .menu-tours__link:focus-visible {
+  outline: none;
+  color: #9e5fc4;
+}
+.menu-tours__link--active {
+  color: #9e5fc4;
+}
+.menu-tours__link--active .menu-tours__link-text {
+  font-weight: 700;
 }
 .menu-tours__link svg {
   width: 20px;
@@ -666,11 +692,10 @@ a {
   color: #9e5fc4;
   font-weight: 700;
 }
-.menu-tours__link--active {
-  color: #9e5fc4;
-}
-.menu-tours__link--active .menu-tours__link-text {
-  font-weight: 600;
+.menu-tours__link-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
 }
 .menu-tours__btn {
   width: 100%;
