--- a/scss/blocks/_main-nav.scss
+++ b/scss/blocks/_main-nav.scss
@@ -17,5 +17,11 @@
     font-weight: 500;
     line-height: 20px;
     color: $color-white;
+
+    &:hover,
+    &:focus-visible {
+      outline: none;
+      color: $color-white-50;
+    }
   }
 }
