new: adaptive content

--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,9 @@ template {
 }
 
 body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: "Exo-2", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -354,6 +357,10 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f4f4f5;
+}
+
+main {
+  flex-grow: 1;
 }
 
 img {
@@ -374,6 +381,18 @@ a {
   max-width: 1160px;
   margin: 0 auto;
   padding: 0 20px;
+}
+@media (max-width: 1023px) {
+  .container {
+    max-width: 768px;
+    padding: 0 30px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    max-width: 375px;
+    padding: 0 20px;
+  }
 }
 
 .visually-hidden {
@@ -398,6 +417,11 @@ a {
 .header__nav {
   display: flex;
   align-items: center;
+}
+@media (max-width: 1023px) {
+  .header__nav {
+    display: none;
+  }
 }
 .header__nav-list {
   margin: 0;
@@ -424,6 +448,18 @@ a {
   gap: 30px;
   padding: 15px 0;
 }
+@media (max-width: 1023px) {
+  .header__content {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+  }
+}
+@media (max-width: 767px) {
+  .header__content {
+    padding: 8px 0;
+  }
+}
 .header__logo-link {
   width: 140px;
   height: 40px;
@@ -434,9 +470,31 @@ a {
   height: 40px;
   flex-shrink: 0;
 }
+@media (max-width: 767px) {
+  .header__logo-link svg {
+    width: 112px;
+    height: 32px;
+  }
+}
+@media (max-width: 1023px) {
+  .header__logo-link {
+    margin: 0;
+  }
+}
+@media (max-width: 767px) {
+  .header__logo-link {
+    display: flex;
+    align-items: center;
+  }
+}
 .header__btn-wrapper {
   display: flex;
   gap: 20px;
+}
+@media (max-width: 767px) {
+  .header__btn-wrapper {
+    gap: 15px;
+  }
 }
 .header__burger, .header__favorites {
   width: 40px;
@@ -449,6 +507,12 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media (max-width: 767px) {
+  .header__burger, .header__favorites {
+    width: 36px;
+    height: 36px;
+  }
 }
 .header__favorites-icon {
   width: 22px;
@@ -464,6 +528,11 @@ a {
   display: flex;
   align-items: center;
   gap: 2px;
+}
+@media (max-width: 1023px) {
+  .header__location {
+    display: none;
+  }
 }
 .header__location-icon {
   width: 28px;
@@ -494,15 +563,38 @@ a {
   background-color: #000000;
   padding: 40px 0;
 }
+@media (max-width: 767px) {
+  .footer {
+    padding: 30px 0;
+  }
+}
 .footer__content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   gap: 20px;
 }
+@media (max-width: 1023px) {
+  .footer__content {
+    grid-template-columns: 140px 1fr 140px;
+  }
+}
+@media (max-width: 767px) {
+  .footer__content {
+    gap: 18px;
+    display: flex;
+    flex-direction: column;
+  }
+}
 .footer__logo-link svg {
   width: 140px;
   height: 40px;
+}
+@media (max-width: 767px) {
+  .footer__logo-link svg {
+    width: 112px;
+    height: 32px;
+  }
 }
 .footer__info {
   display: flex;
@@ -517,6 +609,12 @@ a {
   line-height: 36px;
   letter-spacing: -0.02em;
 }
+@media (max-width: 767px) {
+  .footer__info-tel {
+    font-size: 24px;
+    line-height: 28px;
+  }
+}
 .footer__info-tel:hover, .footer__info-tel:focus-visible {
   color: #9e5fc4;
 }
@@ -525,6 +623,12 @@ a {
   font-size: 14px;
   line-height: 18px;
   margin: 0;
+}
+@media (max-width: 767px) {
+  .footer__info-description {
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 
 .btn {
@@ -567,6 +671,11 @@ a {
   justify-content: flex-end;
   gap: 15px;
 }
+@media (max-width: 767px) {
+  .social {
+    gap: 10px;
+  }
+}
 .social__link {
   display: flex;
   align-items: center;
@@ -576,6 +685,12 @@ a {
   border-radius: 50%;
   border: 1px solid rgba(158, 95, 196, 0.5);
   color: #9e5fc4;
+}
+@media (max-width: 767px) {
+  .social__link {
+    width: 40px;
+    height: 40px;
+  }
 }
 .social__link:hover, .social__link:focus-visible {
   outline: none;
@@ -592,12 +707,23 @@ a {
   padding: 15px 0 0;
   margin: 0 0 30px 0;
 }
+@media (max-width: 767px) {
+  .breadcrumbs {
+    padding: 10px 0 0;
+    margin: 0 0 20px 0;
+  }
+}
 .breadcrumbs__list {
   display: flex;
   gap: 24px;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+@media (max-width: 767px) {
+  .breadcrumbs__list {
+    gap: 14px;
+  }
 }
 .breadcrumbs__item {
   position: relative;
@@ -607,6 +733,12 @@ a {
   font-size: 14px;
   line-height: 18px;
   position: relative;
+}
+@media (max-width: 767px) {
+  .breadcrumbs__link {
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 .breadcrumbs__link--active {
   color: #a1a1a1;
@@ -622,10 +754,20 @@ a {
   transform: translateY(-50%);
   right: -14px;
 }
+@media (max-width: 767px) {
+  .breadcrumbs__link:not(.breadcrumbs__link--active)::after {
+    right: -8px;
+  }
+}
 
 .main-nav {
   padding: 15px 0;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+@media (max-width: 1023px) {
+  .main-nav {
+    display: none;
+  }
 }
 .main-nav__list {
   margin: 0;
@@ -653,9 +795,30 @@ a {
   background-color: #ffffff;
   padding: 25px;
 }
+@media (max-width: 1023px) {
+  .menu-tours {
+    min-height: 390px;
+    border-radius: 12px;
+    padding: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .menu-tours {
+    width: 100%;
+    padding: 0;
+    min-height: unset;
+    border-radius: unset;
+    background-color: transparent;
+  }
+}
 .menu-tours__btn-mobile {
   display: none;
   width: 100%;
+}
+@media (max-width: 767px) {
+  .menu-tours__btn-mobile {
+    display: block;
+  }
 }
 .menu-tours__list {
   padding: 0;
@@ -663,6 +826,17 @@ a {
   display: grid;
   gap: 15px;
   margin: 0 0 25px;
+}
+@media (max-width: 1023px) {
+  .menu-tours__list {
+    gap: 10px;
+    margin: 0 0 20px;
+  }
+}
+@media (max-width: 767px) {
+  .menu-tours__list {
+    display: none;
+  }
 }
 .menu-tours__link {
   background-color: transparent;
@@ -697,12 +871,42 @@ a {
   font-weight: 400;
   line-height: 20px;
 }
+@media (max-width: 1023px) {
+  .menu-tours__link-text {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
 .menu-tours__btn {
   width: 100%;
+}
+@media (max-width: 1023px) {
+  .menu-tours__btn {
+    padding: 11px;
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .menu-tours__btn {
+    display: none;
+  }
+}
+.menu-tours__btn-mobile {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 12px;
+  line-height: 16px;
 }
 
 .gallery {
   margin: 0 0 40px;
+}
+@media (max-width: 767px) {
+  .gallery {
+    margin: 0 0 30px;
+  }
 }
 .gallery__list {
   margin: 0;
@@ -712,43 +916,112 @@ a {
   grid-template-columns: 365px auto 1fr 240px;
   gap: 20px;
 }
+@media (max-width: 1023px) {
+  .gallery__list {
+    grid-template-columns: 240px 240px;
+  }
+}
+@media (max-width: 767px) {
+  .gallery__list {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+}
 .gallery__item--grid-1 {
   grid-column: 1/3;
 }
 .gallery__item--grid-2 {
   grid-column: 3/5;
 }
+@media (max-width: 1023px) {
+  .gallery__item--grid-2 {
+    grid-column: 1/2;
+  }
+}
 .gallery__item--grid-3 {
   grid-column: 1/2;
   grid-row: 2/4;
+}
+@media (max-width: 1023px) {
+  .gallery__item--grid-3 {
+    grid-column: span 1;
+    grid-row: unset;
+  }
 }
 .gallery__item--grid-4 {
   grid-column: 2/4;
   grid-row: 2/3;
 }
+@media (max-width: 1023px) {
+  .gallery__item--grid-4 {
+    grid-column: span 2;
+    grid-row: unset;
+  }
+}
 .gallery__item--grid-5 {
   grid-column: 4/5;
   grid-row: 2;
+}
+@media (max-width: 1023px) {
+  .gallery__item--grid-5 {
+    grid-column: 1/2;
+    grid-row: unset;
+  }
 }
 .gallery__item--grid-6 {
   grid-column: 2/5;
   grid-row: 3/6;
 }
+@media (max-width: 1023px) {
+  .gallery__item--grid-6 {
+    grid-column: span 1;
+    grid-row: unset;
+  }
+}
 .gallery__item--grid-7 {
   grid-column: 1/2;
   grid-row: 4/6;
+}
+@media (max-width: 1023px) {
+  .gallery__item--grid-7 {
+    grid-column: span 2;
+    grid-row: unset;
+  }
 }
 .gallery__item--grid-8 {
   grid-column: 2/4;
   grid-row: 5/6;
 }
+@media (max-width: 1023px) {
+  .gallery__item--grid-8 {
+    grid-column: 1/2;
+    grid-row: unset;
+  }
+}
 .gallery__item--grid-9 {
   grid-column: 4/5;
   grid-row: 5/6;
 }
+@media (max-width: 1023px) {
+  .gallery__item--grid-9 {
+    grid-column: span 1;
+    grid-row: unset;
+  }
+}
 
 .gallery-block {
   margin: 0 0 80px;
+}
+@media (max-width: 1023px) {
+  .gallery-block {
+    margin: 0 0 125px;
+  }
+}
+@media (max-width: 767px) {
+  .gallery-block {
+    margin: 0 0 60px;
+  }
 }
 .gallery-block__wrap {
   display: grid;
@@ -756,8 +1029,38 @@ a {
   grid-template-columns: 1fr 215px;
   gap: 20px;
 }
+@media (max-width: 1023px) {
+  .gallery-block__wrap {
+    grid-template-columns: 1fr 180px;
+    gap: 28px;
+  }
+}
+@media (max-width: 767px) {
+  .gallery-block__wrap {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 30px;
+  }
+}
 .gallery-block__btn {
   width: 100%;
+}
+@media (max-width: 1023px) {
+  .gallery-block__btn {
+    position: absolute;
+    width: 708px;
+    font-size: 14px;
+    line-height: 18px;
+    padding: 13px 0;
+  }
+}
+@media (max-width: 767px) {
+  .gallery-block__btn {
+    font-size: 12px;
+    line-height: 16px;
+    position: unset;
+    width: 100%;
+  }
 }
 
 .gallery-card {
@@ -765,10 +1068,6 @@ a {
   flex-direction: column;
   gap: 5px;
   margin: 0;
-}
-.gallery-card__img {
-  flex-shrink: 0;
-  border-radius: 8px;
 }
 .gallery-card__img--size-xs {
   width: 240px;
@@ -794,12 +1093,33 @@ a {
   width: 500px;
   height: 300px;
 }
+.gallery-card__img {
+  flex-shrink: 0;
+  border-radius: 8px;
+}
+@media (max-width: 1023px) {
+  .gallery-card__img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .gallery-card__img {
+    width: 335px;
+    height: 240px;
+  }
+}
 .gallery-card__caption {
   color: rgba(36, 36, 36, 0.5);
   text-align: right;
   font-size: 13px;
   line-height: 16px;
   margin: 0;
+}
+@media (max-width: 767px) {
+  .gallery-card__caption {
+    font-size: 12px;
+  }
 }
 
 .modal {
