--- a/scss/blocks/_gallery-card.scss
+++ b/scss/blocks/_gallery-card.scss
@@ -4,11 +4,6 @@
   gap: 5px;
   margin: 0;
 
-  &__img {
-    flex-shrink: 0;
-    border-radius: 8px;
-  }
-
   &__img--size-xs {
     width: 240px;
     height: 240px;
@@ -39,11 +34,30 @@
     height: 300px;
   }
 
+  &__img {
+    flex-shrink: 0;
+    border-radius: 8px;
+
+    @include vp-1023 {
+      width: 100%;
+      height: 100%;
+    }
+
+    @include vp-767 {
+      width: 335px;
+      height: 240px;
+    }
+  }
+
   &__caption {
     color: $color-nero-50;
     text-align: right;
     font-size: 13px;
     line-height: 16px;
     margin: 0;
+
+    @include vp-767 {
+      font-size: 12px;
+    }
   }
 }
