--- a/scss/blocks/_menu-tours.scss
+++ b/scss/blocks/_menu-tours.scss
@@ -5,9 +5,27 @@
   background-color: $color-white;
   padding: 25px;
 
+  @include vp-1023 {
+    min-height: 390px;
+    border-radius: 12px;
+    padding: 20px;
+  }
+
+  @include vp-767 {
+    width: 100%;
+    padding: 0;
+    min-height: unset;
+    border-radius: unset;
+    background-color: transparent;
+  }
+
   &__btn-mobile {
     display: none;
     width: 100%;
+
+    @include vp-767 {
+      display: block;
+    }
   }
 
   &__list {
@@ -17,6 +35,15 @@
     display: grid;
     gap: 15px;
     margin: 0 0 25px;
+
+    @include vp-1023 {
+      gap: 10px;
+      margin: 0 0 20px;
+    }
+
+    @include vp-767 {
+      display: none;
+    }
   }
 
   &__link {
@@ -57,10 +84,33 @@
       font-size: 16px;
       font-weight: 400;
       line-height: 20px;
+
+      @include vp-1023 {
+        font-size: 14px;
+        line-height: 18px;
+      }
     }
   }
 
   &__btn {
     width: 100%;
+
+    @include vp-1023 {
+      padding: 11px;
+      font-size: 12px;
+      line-height: 16px;
+    }
+
+    @include vp-767 {
+      display: none;
+    }
+
+    &-mobile {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 12px;
+      line-height: 16px;
+    }
   }
 }
