--- a/scss/blocks/_breadcrumbs.scss
+++ b/scss/blocks/_breadcrumbs.scss
@@ -2,6 +2,11 @@
   padding: 15px 0 0;
   margin: 0 0 30px 0;
 
+  @include vp-767 {
+    padding: 10px 0 0;
+    margin: 0 0 20px 0;
+  }
+
   &__list {
     display: flex;
     gap: 24px;
@@ -9,6 +14,10 @@
     margin: 0;
     padding: 0;
     list-style: none;
+
+    @include vp-767 {
+      gap: 14px;
+    }
   }
 
   &__item {
@@ -20,6 +29,11 @@
     font-size: 14px;
     line-height: 18px;
     position: relative;
+
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 16px;
+    }
   }
 
   &__link--active {
@@ -36,5 +50,9 @@
     top: 50%;
     transform: translateY(-50%);
     right: -14px;
+
+    @include vp-767 {
+      right: -8px;
+    }
   }
 }
