--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -2,17 +2,36 @@
   background-color: $color-black;
   padding: 40px 0;
 
+  @include vp-767 {
+    padding: 30px 0;
+  }
+
   &__content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 20px;
+
+    @include vp-1023 {
+      grid-template-columns: 140px 1fr 140px;
+    }
+    
+    @include vp-767 {
+      gap: 18px;
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__logo-link {
     svg {
       width: 140px;
       height: 40px;
+      
+      @include vp-767 {
+        width: 112px;
+        height: 32px;
+      }
     }
   }
 
@@ -30,6 +49,11 @@
     line-height: 36px;
     letter-spacing: -0.02em;
 
+    @include vp-767 {
+      font-size: 24px;
+      line-height: 28px;
+    }
+
     &:hover,
     &:focus-visible {
       color: $color-deep-lilac;
@@ -41,5 +65,10 @@
     font-size: 14px;
     line-height: 18px;
     margin: 0;
+
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 16px;
+    }
   }
 }
