--- a/scss/blocks/_gallery.scss
+++ b/scss/blocks/_gallery.scss
@@ -1,6 +1,10 @@
 .gallery {
   margin: 0 0 40px;
 
+  @include vp-767 {
+    margin: 0 0 30px;
+  }
+
   &__list {
     margin: 0;
     padding: 0;
@@ -9,6 +13,16 @@
     display: grid;
     grid-template-columns: 365px auto 1fr 240px;
     gap: 20px;
+
+    @include vp-1023 {
+      grid-template-columns: 240px 240px;
+    }
+
+    @include vp-767 {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
   }
 
   &__item--grid-1 {
@@ -17,40 +31,79 @@
 
   &__item--grid-2 {
     grid-column: 3 / 5;
+
+    @include vp-1023 {
+      grid-column: 1 / 2;
+    }
   }
 
   &__item--grid-3 {
     grid-column: 1 / 2;
     grid-row: 2 / 4;
+
+    @include vp-1023 {
+      grid-column: span 1;
+      grid-row: unset;
+    }
   }
 
   &__item--grid-4 {
     grid-column: 2 / 4;
     grid-row: 2 / 3;
+
+    @include vp-1023 {
+      grid-column: span 2;
+      grid-row: unset;
+    }
   }
 
   &__item--grid-5 {
     grid-column: 4 / 5;
     grid-row: 2;
+
+    @include vp-1023 {
+      grid-column: 1 / 2;
+      grid-row: unset;
+    }
   }
 
   &__item--grid-6 {
     grid-column: 2 / 5;
     grid-row: 3 / 6;
+
+    @include vp-1023 {
+      grid-column: span 1;
+      grid-row: unset;
+    }
   }
 
   &__item--grid-7 {
     grid-column: 1 / 2;
     grid-row: 4 / 6;
+    
+    @include vp-1023 {
+      grid-column: span 2;
+      grid-row: unset;
+    }
   }
 
   &__item--grid-8 {
     grid-column: 2 / 4;
     grid-row: 5 / 6;
+
+    @include vp-1023 {
+      grid-column: 1 / 2;
+      grid-row: unset;
+    }
   }
 
   &__item--grid-9 {
     grid-column: 4 / 5;
     grid-row: 5 / 6;
+
+    @include vp-1023 {
+      grid-column: span 1;
+      grid-row: unset;
+    }
   }
 }
