--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -4,6 +4,10 @@
   &__nav {
     display: flex;
     align-items: center;
+
+    @include vp-1023 {
+      display: none;
+    }
   }
 
   &__nav-list {
@@ -35,6 +39,16 @@
     align-items: center;
     gap: 30px;
     padding: 15px 0;
+
+    @include vp-1023 {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px 0;
+    }
+
+    @include vp-767 {
+      padding: 8px 0;
+    }
   }
 
   &__logo-link {
@@ -46,12 +60,30 @@
       width: 140px;
       height: 40px;
       flex-shrink: 0;
+
+      @include vp-767 {
+        width: 112px;
+        height: 32px;
+      }
+    }
+
+    @include vp-1023 {
+      margin: 0;
+    }
+
+    @include vp-767 {
+      display: flex;
+      align-items: center;
     }
   }
 
   &__btn-wrapper {
     display: flex;
     gap: 20px;
+
+    @include vp-767 {
+      gap: 15px;
+    }
   }
 
   &__burger,
@@ -66,6 +98,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include vp-767 {
+      width: 36px;
+      height: 36px;
+    }
   }
 
   &__favorites-icon {
@@ -84,6 +121,10 @@
     display: flex;
     align-items: center;
     gap: 2px;
+
+    @include vp-1023 {
+      display: none;
+    }
   }
 
   &__location-icon {
