--- a/scss/blocks/_main-nav.scss
+++ b/scss/blocks/_main-nav.scss
@@ -2,6 +2,10 @@
   padding: 15px 0;
   border-top: 1px solid $color-white-20;
 
+  @include vp-1023 {
+    display: none;
+  }
+
   &__list {
     margin: 0;
     padding: 0;
