--- a/scss/blocks/_social.scss
+++ b/scss/blocks/_social.scss
@@ -7,6 +7,10 @@
   justify-content: flex-end;
   gap: 15px;
 
+  @include vp-767 {
+    gap: 10px;
+  }
+
   &__link {
     display: flex;
     align-items: center;
@@ -16,6 +20,11 @@
     border-radius: 50%;
     border: 1px solid $color-deep-lilac-50;
     color: $color-deep-lilac;
+
+    @include vp-767 {
+      width: 40px;
+      height: 40px;
+    }
 
     &:hover,
     &:focus-visible {
