--- a/scss/global/_reboot.scss
+++ b/scss/global/_reboot.scss
@@ -5,6 +5,9 @@
 }
 
 body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: $ff-exo;
   font-style: normal;
   font-weight: 400;
@@ -12,6 +15,10 @@ body {
   margin: 0;
   padding: 0;
   background-color: $color-ghost-white;
+}
+
+main {
+  flex-grow: 1;
 }
 
 img {
