new: modal windows

--- a/css/style.css
+++ b/css/style.css
@@ -811,15 +811,6 @@ a {
     background-color: transparent;
   }
 }
-.menu-tours__btn-mobile {
-  display: none;
-  width: 100%;
-}
-@media (max-width: 767px) {
-  .menu-tours__btn-mobile {
-    display: block;
-  }
-}
 .menu-tours__list {
   padding: 0;
   list-style: none;
@@ -893,11 +884,17 @@ a {
   }
 }
 .menu-tours__btn-mobile {
-  display: flex;
+  display: none;
+  width: 100%;
   align-items: center;
   gap: 10px;
   font-size: 12px;
   line-height: 16px;
+}
+@media (max-width: 767px) {
+  .menu-tours__btn-mobile {
+    display: flex;
+  }
 }
 
 .gallery {
@@ -1130,6 +1127,12 @@ a {
   height: 100%;
   display: none;
 }
+.modal--success .modal__wrapper .modal__content .modal-form {
+  display: none;
+}
+.modal--success .modal__wrapper .modal__content .modal-success {
+  display: flex;
+}
 .modal::after {
   content: "";
   z-index: -1;
@@ -1154,6 +1157,12 @@ a {
   height: 100%;
   padding: 40px;
 }
+@media (max-width: 1023px) {
+  .modal__wrapper {
+    background-color: #ffffff;
+    padding: 0;
+  }
+}
 .modal__content {
   position: relative;
   width: 100%;
@@ -1163,11 +1172,206 @@ a {
   margin: auto;
   padding: 30px 70px 60px;
   background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 1023px) {
+  .modal__content {
+    margin: 0;
+    padding: 30px 120px;
+    height: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .modal__content {
+    padding: 20px;
+  }
+}
+.modal-form {
+  width: 100%;
+  gap: 30px;
+}
+.modal-form__wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 35px 30px;
+  margin: 0 0 40px 0;
+}
+@media (max-width: 1023px) {
+  .modal-form__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0 0 30px 0;
+  }
+}
+.modal-form__title {
+  grid-column: 1/-1;
+  font-size: 32px;
+  line-height: 36px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0 0 60px;
+}
+@media (max-width: 1023px) {
+  .modal-form__title {
+    font-size: 26px;
+    line-height: 32px;
+    margin: 0 0 30px;
+  }
+}
+@media (max-width: 767px) {
+  .modal-form__title {
+    font-size: 20px;
+    line-height: 20px;
+    min-height: 40px;
+    margin: 0 0 20px 0;
+  }
+}
+.modal-form__submit {
+  grid-column: 1/-1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+@media (max-width: 1023px) {
+  .modal-form__submit {
+    gap: 5px;
+  }
+}
+.modal-form__btn {
+  width: 300px;
+  line-height: 21px;
+}
+@media (max-width: 767px) {
+  .modal-form__btn {
+    width: 335px;
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+.modal-form__terms {
+  margin: 0;
+  font-size: 12px;
+  line-height: 16px;
+  color: #8c8c8d;
+}
+@media (max-width: 767px) {
+  .modal-form__terms {
+    text-align: center;
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
+.modal-form__suitcase {
+  position: absolute;
+  left: 130px;
+  bottom: 80px;
+  opacity: 0.5;
+  pointer-events: none;
+}
+@media (max-width: 1023px) {
+  .modal-form__suitcase {
+    width: 80px;
+    height: 149px;
+    left: 20px;
+    bottom: 110px;
+    opacity: 1;
+  }
+}
+@media (max-width: 767px) {
+  .modal-form__suitcase {
+    display: none;
+  }
+}
+.modal-form__plane {
+  position: absolute;
+  right: 160px;
+  bottom: 40px;
+  opacity: 0.5;
+  pointer-events: none;
+}
+@media (max-width: 1023px) {
+  .modal-form__plane {
+    width: 340px;
+    height: 108px;
+    right: 40px;
+    bottom: -25px;
+    opacity: 1;
+  }
+}
+@media (max-width: 767px) {
+  .modal-form__plane {
+    display: none;
+  }
+}
+.modal-success {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  padding: 120px 0 90px 0;
+}
+@media (max-width: 1023px) {
+  .modal-success {
+    padding: 0;
+    margin: auto;
+  }
+}
+.modal-success__icon {
+  margin: 0 0 40px 0;
+}
+@media (max-width: 767px) {
+  .modal-success__icon {
+    margin: 0 0 30px 0;
+  }
+}
+.modal-success__title {
+  margin: 0 0 20px 0;
+  font-size: 32px;
+  line-height: 36px;
+  font-weight: 600;
+}
+@media (max-width: 1023px) {
+  .modal-success__title {
+    font-size: 26px;
+    line-height: 32px;
+  }
+}
+@media (max-width: 767px) {
+  .modal-success__title {
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0 0 15px 0;
+  }
+}
+.modal-success__message {
+  margin: 0 0 40px 0;
+  font-size: 16px;
+  line-height: 20px;
+}
+@media (max-width: 767px) {
+  .modal-success__message {
+    margin: 0 0 30px 0;
+    font-size: 13px;
+    line-height: 16px;
+    min-height: 32px;
+  }
+}
+.modal-success__btn {
+  width: 200px;
+}
+@media (max-width: 767px) {
+  .modal-success__btn {
+    width: 160px;
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 .modal__close-btn {
   position: absolute;
-  top: 12px;
-  right: 23px;
+  top: 10px;
+  right: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1179,7 +1383,197 @@ a {
   border-radius: 50%;
   cursor: pointer;
 }
+@media (max-width: 767px) {
+  .modal__close-btn {
+    top: 5px;
+    right: 5px;
+    width: 48px;
+    height: 48px;
+  }
+}
+.modal__close-btn:hover, .modal__close-btn:focus-visible {
+  background-color: #eee0f6;
+  outline: none;
+}
 .modal__close-btn svg {
   width: 20px;
   height: 20px;
+}
+@media (max-width: 767px) {
+  .modal__close-btn svg {
+    width: 14px;
+    height: 14px;
+  }
+}
+
+.custom-input {
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  gap: 3px;
+  position: relative;
+}
+@media (max-width: 767px) {
+  .custom-input {
+    gap: 5px;
+  }
+}
+.custom-input__label {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #8c8c8d;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+@media (max-width: 767px) {
+  .custom-input__label {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+.custom-input__field {
+  padding: 14px;
+  border: 1px solid #d6dce6;
+  border-radius: 8px;
+  color: #242424;
+  font-size: 15px;
+  line-height: 20px;
+}
+@media (max-width: 1023px) {
+  .custom-input__field {
+    padding: 16px;
+  }
+}
+@media (max-width: 767px) {
+  .custom-input__field {
+    font-size: 14px;
+    line-height: 18px;
+    padding: 14px;
+  }
+}
+.custom-input__field[disabled] {
+  background-color: #f4f4f5;
+}
+.custom-input__field::-moz-placeholder {
+  color: #8c8c8d;
+}
+.custom-input__field::placeholder {
+  color: #8c8c8d;
+}
+.custom-input__field[disabled]::-moz-placeholder {
+  opacity: 0.5;
+}
+.custom-input__field[disabled]::placeholder {
+  opacity: 0.5;
+}
+.custom-input__field:hover, .custom-input__field:focus-visible {
+  border: 1px solid #9e5fc4;
+  outline: none;
+}
+.custom-input__field[disabled], .custom-input__field[disabled] + .custom-input__label {
+  pointer-events: none;
+}
+.custom-input__error {
+  display: none;
+}
+.custom-input--error .custom-input__field {
+  border-color: #e80e0a;
+}
+.custom-input--error .custom-input__error {
+  display: block;
+  position: absolute;
+  top: 100%;
+  font-size: 12px;
+  line-height: 16px;
+  color: #e80e0a;
+  z-index: 1;
+}
+
+.custom-textarea {
+  grid-column: 1/4;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  gap: 5px;
+  position: relative;
+}
+.custom-textarea__label {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #8c8c8d;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+@media (max-width: 767px) {
+  .custom-textarea__label {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+.custom-textarea__field {
+  padding: 16px;
+  min-height: 158px;
+  border: 1px solid #d6dce6;
+  border-radius: 8px;
+  color: #242424;
+  resize: none;
+}
+@media (max-width: 1023px) {
+  .custom-textarea__field {
+    min-height: 140px;
+  }
+}
+@media (max-width: 767px) {
+  .custom-textarea__field {
+    min-height: 120px;
+    font-size: 14px;
+    line-height: 18px;
+    padding: 14px;
+  }
+}
+.custom-textarea__field[disabled] {
+  background-color: #f4f4f5;
+}
+.custom-textarea__field::-moz-placeholder {
+  color: #8c8c8d;
+}
+.custom-textarea__field::placeholder {
+  color: #8c8c8d;
+}
+.custom-textarea__field[disabled]::-moz-placeholder {
+  opacity: 0.5;
+}
+.custom-textarea__field[disabled]::placeholder {
+  opacity: 0.5;
+}
+.custom-textarea__field:hover, .custom-textarea__field:focus-visible {
+  border: 1px solid #9e5fc4;
+  outline: none;
+}
+.custom-textarea__field[disabled], .custom-textarea__field[disabled] + .custom-textarea__label {
+  pointer-events: none;
+}
+.custom-textarea__error {
+  display: none;
+}
+.custom-textarea--error .custom-textarea__field {
+  border-color: #e80e0a;
+}
+.custom-textarea--error .custom-textarea__error {
+  display: block;
+  position: absolute;
+  top: 100%;
+  font-size: 12px;
+  line-height: 16px;
+  color: #e80e0a;
+  z-index: 1;
 }/*# sourceMappingURL=style.css.map */
