--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,3 +23,5 @@
 @import "blocks/_gallery-block";
 @import "blocks/_gallery-card";
 @import "blocks/_modal";
+@import "blocks/_custom-input";
+@import "blocks/_custom-textarea";
